--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>used in feature1 branch
-
-    </h1>
+    <h1>used in feature1 branch</h1>
 </body>
 </html>
